ghc-4335c07/testsuite/tests/typecheck/should_compile/T10589.hs
{-# LANGUAGE LambdaCase, TypeFamilies #-}

module T10589 where

type family F a where
  F a = Bool -> a

foo = (\case True -> 5
             False -> 6) :: F Int
